--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>RagnaMemory</title>
+    <title>Ragna-Memory</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="node_modules/bootstrap/compiler/bootstrap.css">
     <!-- Styles -->
@@ -11,17 +11,18 @@
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 </head>
 <body class="bg-gradient-primary">
+    <!-- HEADER -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-            <p class="logo-rag-p"><a class="navbar-brand h1 mb-0 logo-rag" href="index.html">RAGNA MEMORY</a></p>
+            <p class="logo-rag-p"><a class="navbar-brand h1 mb-0 logo-rag" href="index.html">Ragna Memory</a></p>
             <button  class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSite">
                 <ul class="navbar-nav mr-auto">
-                    <li><a class="nav-link" href="quests.html"><h5 >Quests</h5></a></li>
-                    <li><a class="nav-link" href="#"><h5>Informações</h5></a></li>
-                    <li><a class="nav-link" href="#"><h5>Classes</h5></a></li>
+                    <li><a class="nav-link" href="guias.html"><h5 >Guias</h5></a></li>
+                    <li><a class="nav-link" href="info.html"><h5>Informações</h5></a></li>
+                    <li><a class="nav-link" href="classes.html"><h5>Classes</h5></a></li>
                     <li>
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
@@ -29,10 +30,10 @@
                                     Social
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Facebook</a>
-                                    <a class="dropdown-item" href="#">Twitter</a>
-                                    <a class="dropdown-item" href="#">Twitch</a>
-                                    <a class="dropdown-item" href="#">Youtube</a>
+                                    <a class="dropdown-item" href="https://www.facebook.com">Facebook</a>
+                                    <a class="dropdown-item" href="https://www.twitter.com">Twitter</a>
+                                    <a class="dropdown-item" href="https://www.twitch.tv/">Twitch</a>
+                                    <a class="dropdown-item" href="https://www.youtube.com/">Youtube</a>
                                 </div>
                             </li>
                         </ul>
@@ -53,19 +54,13 @@
                         </ul>
                     </li>
                 </ul>
-
-<!--    FORMULARIO DE BUSCA ------------------------------------------------
-                <form class="form-inline">
-                    <input class="form-control mr-4" type="search" placeholder="Buscar...">
-                    <button class="btn btn-outline-dark ">OK</button>
-                </form>
--->
             </div>
         </nav>
     </header>
+    <!-- CORPO PAGINA -->
     <!-- Div Carousel -->
     <div id="carouselSite" class="carousel slide" data-ride="carousel">
-        <!-- Indicadores centrais -->
+        <!-- Indicadores/botões centrais -->
         <ol class="carousel-indicators">
             <li data-target="#carouselSite" data-slide-to="0" class="active"></li>
             <li data-target="#carouselSite" data-slide-to="1"></li>
@@ -118,39 +113,48 @@
             <span class="sr-only">Próximo</span>
         </a>
     </div>
+    <!-- Cards -->
     <div class="row mb-5 mt-3">
         <div class="col-md-3 pl-md-5">
             <div class="card">
                 <div class="card-body">
                     <img src="_imagens/carousel/wallpaper6.jpg" class="card-img-top">
                     <h5 class="card-title">Players Online</h5>
-                    <h6 class="text-muted">280</h6>
-                    <a href="#" class="card-link">Login</a>
-                    <a href="#" class="card-link">Registrar</a>
+                    <h5 class="card-title text-dark">0</h5>
+                    <a href="login.html" class="card-link">Login</a>
+                    <a href="registrar.html" class="card-link">Registrar</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Sobre o Ragna Memory</h4>
                     <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur</p>
-                    <p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p>
+                    <p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p><p>teste</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-4 pr-md-5">
+        <div class="col-md-3 pr-md-5">
             <div class="card">
                 <div class="card-body card-title">
                     <h5>Estatísticas do Servidor</h5>
                     <p>Contas criadas:</p>
-                    <p>12392</p>
-                    <p>Nevascas Lançadas:</p>
-                    <p>123.145.124</p>
+                    <p>0</p>
+                    <p>Tempo Online:</p>
+                    <p>00:00:00</p>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Footer-->
+    <footer>
+        <div class="footer-bottom">
+            <div class="container">
+                <p class="font-weight-lighter text-center">www.ragnamemory.com © Copyright 2019 by NOOBZEIRO <p class="font-weight-lighter text-center">Imagens e nomes são propriedades da Level-Up Interactive S.A. / Warp Portal S.A. Copyright © 2002 ~ 2019 Gravity Corp. & LeeMyougjin</p><p class="font-weight-lighter text-center">TODOS OS DIREITOS RESERVADOS</p>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="node_modules/jquery/dist/jquery.js"></script>
 <script src="node_modules/popper.js/dist/popper.min.js"></script>
