--- a/model.html
+++ b/model.html
@@ -2,45 +2,73 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>RagnaMemory</title>
+    <title>Ragna-Memory</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="node_modules/bootstrap/compiler/bootstrap.css">
     <!-- Styles -->
     <link rel="stylesheet" href="node_modules/bootstrap/compiler/style.css">
+    <!-- Font AudioWide -->
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-primary">
-        <div class="container">
-            <a class="navbar-brand h1 mb-0" href="index.html">Ragna Memory</a>
-            <button  class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSite">
-                <ul class="navbar-nav mr-auto">
-                    <li><a class="nav-link" href="#">Quests</a></li>
-                    <li><a class="nav-link" href="#">Informações</a></li>
-                    <li><a class="nav-link" href="#">Downloads</a></li>
-                </ul>
-                <ul class="navbar-nav ml-auto" mr-5>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navDrop">
-                            Data Base
-                        </a>
-                        <div class="dropdown-menu mb-2">
-                            <a class="dropdown-item" href="#">Monstros</a>
-                            <a class="dropdown-item" href="#">Itens</a>
-                            <a class="dropdown-item" href="#">NPC's</a>
-                            <a class="dropdown-item" href="#">Hats</a>
-                        </div>
-                    </li>
-                </ul>
-                <form class="form-inline">
-                    <input class="form-control mr-4" type="search" placeholder="Buscar...">
-                    <button class="btn btn-primary btn-outline-dark">OK</button>
-                </form>
-            </div>
+<body class="bg-gradient-primary">
+<!-- HEADER -->
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <p class="logo-rag-p"><a class="navbar-brand h1 mb-0 logo-rag" href="index.html">Ragna Memory</a></p>
+        <button  class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSite">
+            <ul class="navbar-nav mr-auto">
+                <li><a class="nav-link" href="guias.html"><h5 >Guias</h5></a></li>
+                <li><a class="nav-link" href="info.html"><h5>Informações</h5></a></li>
+                <li><a class="nav-link" href="classes.html"><h5>Classes</h5></a></li>
+                <li>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle menu-op" href="#" data-toggle="dropdown" id="navDrop">
+                                Social
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="https://www.facebook.com">Facebook</a>
+                                <a class="dropdown-item" href="https://www.twitter.com">Twitter</a>
+                                <a class="dropdown-item" href="https://www.twitch.tv/">Twitch</a>
+                                <a class="dropdown-item" href="https://www.youtube.com/">Youtube</a>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle menu-op" href="#" data-toggle="dropdown" id="navDrop">
+                                Data Base
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Monstros</a>
+                                <a class="dropdown-item" href="#">Itens</a>
+                                <a class="dropdown-item" href="#">NPC's</a>
+                                <a class="dropdown-item" href="#">Hats</a>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </nav>
+</header>
+<!-- CORPO PAGINA -->
+<div class="corpo_pagina container">
+
+</div>
+<!-- Footer-->
+<footer>
+    <div class="footer-bottom">
+        <div class="container">
+            <p class="font-weight-lighter text-center">www.ragnamemory.com © Copyright 2019 by NOOBZEIRO <p class="font-weight-lighter text-center">Imagens e nomes são propriedades da Level-Up Interactive S.A. / Warp Portal S.A. Copyright © 2002 ~ 2019 Gravity Corp. & LeeMyougjin</p><p class="font-weight-lighter text-center">TODOS OS DIREITOS RESERVADOS</p>
+        </div>
+    </div>
+</footer>
 </body>
 <script src="node_modules/jquery/dist/jquery.js"></script>
 <script src="node_modules/popper.js/dist/popper.min.js"></script>
