Remoção dos cards laterais da pagina inicial (index).

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- Cards -->
     <div class="row mb-5 mt-3">
         <div class="col-md-3 pl-md-5">
-            <div class="card">
+            <div class="card card-players-online">
                 <div class="card-body">
                     <img src="_imagens/carousel/wallpaper6.jpg" class="card-img-top">
                     <h5 class="card-title">Players Online</h5>
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="col-md-3 pr-md-5">
-            <div class="card">
+            <div class="card card-estatisticas">
                 <div class="card-body card-title">
                     <h5>Estatísticas do Servidor</h5>
                     <p>Contas criadas:</p>
