--- a/guias.html
+++ b/guias.html
@@ -113,7 +113,7 @@
     <div class="row mb-2 ml-5 pl-5 pt-3">
         <div class="col-md-5 bg-gradient-light mb-5">
             <img class="card-img-top" src="_imagens/cidades/Geffen.png">
-            <h6 class="text-sm-left"><a href="quest-orc-heroi" class="card-link">Quest Elmo do Orc Herói</a></h6>
+            <h6 class="text-sm-left"><a href="quests/elmo_de_orc_heroi.html" class="card-link">Quest Elmo do Orc Herói</a></h6>
         </div>
         <div class="col-md-5 bg-gradient-light mb-5 ml-5">
             <img class="card-img-top" src="_imagens/cidades/hugel.png">
@@ -215,7 +215,7 @@
 <footer>
     <div class="footer-bottom">
         <div class="container">
-            <p class="font-weight-lighter text-center">www.ragnamemory.com © Copyright 2019 by NOOBZEIRO <p class="font-weight-lighter text-center">Imagens e nomes são propriedades da Level-Up Interactive S.A. / Warp Portal S.A. Copyright © 2002 ~ 2019 Gravity Corp. & LeeMyougjin</p><p class="font-weight-lighter text-center">TODOS OS DIREITOS RESERVADOS</p>
+            <p class="font-weight-lighter text-center">www.ragnamemory.com © Copyright 2019 by Matheus Martins de Oliveira <p class="font-weight-lighter text-center">Imagens e nomes são propriedades da Level-Up Interactive S.A. / Warp Portal S.A. Copyright © 2002 ~ 2019 Gravity Corp. & LeeMyougjin</p><p class="font-weight-lighter text-center">TODOS OS DIREITOS RESERVADOS</p>
         </div>
     </div>
 </footer>
